# Block-Pose-Estimation

./: CMakeLists.txt  DominantPlane.cpp  DominantPlane.h  main.cpp  matching_algorithm.cpp  package.xml  small_pointcloud_generator.py
matching_algorithm/: CMakeLists.txt  matching_algorithm.cpp  rect_fitting.cpp
matching_algorithm/DisplayImage/: CMakeCache.txt  DisplayImage  DisplayImage.cpp  Makefile  cmake_install.cmake
